biome featuers now use the correct mod id